# rust-opencl-demo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: push.yaml  push_wrapper.yaml
http-wrapper/: Dockerfile
http-wrapper/k8s/: deployment.yaml  device-plugin.yaml
src/: main.rs
src/benching/: mod.rs  result.rs
src/concurrency/: executor.rs
src/kernel_controller/: bench.rs  kernel.cl  mod.rs  primes.rs  primes_streamed.rs
src/output/: csv.rs  mod.rs  threaded.rs
src/utils/: args.rs  logging.rs  mod.rs  progress.rs
