[package]
name = "rust-opencl-demo"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.3"
structopt = "0.3.20"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
rayon = "1.5.0"
ocl-stream = "0.3.0"
crossbeam-channel = "0.5.0"